--- a/src/main/webapp/css/numguessstyle.css
+++ b/src/main/webapp/css/numguessstyle.css
@@ -6,11 +6,13 @@ version 1.0
 */
 
 body {
+
     background-color:floralwhite;
     font-family: Verdana, Helvetica, Arial, sans-serif;
     line-height: 125%;
     padding: 0;
     margin: 0;
+        background-image: url("Fruits.png");
 }
 
 
@@ -40,9 +42,11 @@ h1 {
     position: absolute;
     border-top: 3px solid #7da5d8;
     width: 100%;
+
 }
 
 #navigation {
+opacity: 0.6;
     position: absolute;
     top: 110px;
     width: 110px;
@@ -54,6 +58,7 @@ h1 {
 }
 
 #bodycontent {
+
     position: absolute;
     left: 140px;
     top: 120px;
@@ -62,6 +67,7 @@ h1 {
 }
 
 #postcontent {
+opacity: 0.6;
     position: absolute;
     left: 360px;
     top: 110px;
