--- a/src/main/webapp/css/numguessstyle.css
+++ b/src/main/webapp/css/numguessstyle.css
@@ -42,7 +42,7 @@ h1 {
     text-align:center;
     font-style: italic;
     font-family: Georgia, Times, serif;
-    border-bottom: 10px double #500d1d;
+    border-bottom: 10px double white;
     padding-top: 1.2em;
     padding-bottom: .2em;
     padding-left: .8em;
